--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Nossos Objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Cursos na Alura</button>
+            <button class="botao ativo">Cursos na Alura</button>
             <button class="botao">Criar projetos em Javascript</button>
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar meu currículo</button>
         </div>
+        <div class="abas-texto">
+    <div class="aba-conteudos">
+            <h3 class=""
+
+          </div>
+      </div>
     </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
