--- a/index.html
+++ b/index.html
@@ -19,22 +19,26 @@
             <button class="botao">Ser rico</button>
         </div>
 
-        <div class="abas-texto"
-    <div class="aba-conteudos">
+        <div class="abas-texto">
+    <div class="aba-conteudo ativo">
             <h3 class="aba-conteudo-titulo-principal">UM BOM FUTURO</h3>
             <h4 class="aba-conteudo-titulo-sercundario">ESTUDAR BASTANTE</h4>
+            <div class="contador"></div>
           </div>
-     <div class="aba-conteudos">
+     <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal"> ESTUDAR</h3>
             <h4 class="aba-conteudo-titulo-sercundario">PRESTAR ATENÇAO NAS AULAS</h4>
+            <div class="contador"></div>
           </div>
-    <div class="aba-conteudos">
+    <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal"> SE ESFORCAR</h3>
             <h4 class="aba-conteudo-titulo-sercundario">PARAR DE PROCRASTINAR</h4>
+            <div class="contador"></div>
           </div>   
-    <div class="aba-conteudos">
+    <div class="aba-conteudo">
             <h3 class="aba-conteudo-titulo-principal"> SER EMPREENDEDOR</h3>
             <h4 class="aba-conteudo-titulo-sercundario">TER RESPONSABILIDADE FINANCEIRA</h4>
+            <div class="contador"></div>
           </div>
         </div>
 
