--- a/index.html
+++ b/index.html
@@ -4,44 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOSSOS OBJETIVOS DO ANO 3B </title>
+    <title>Meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Nossos Objetivos do ano<span>_</span></h2>
-       <div calss="conteudo"> 
-        <div class="botoes">
-            <button class="botao ativo">Se formar</button>
-            <button class="botao">Tirar uma boa nota no enem</button>
-            <button class="botao">Arranjar um bom trabalho</button>
-            <button class="botao">Ser rico</button>
-        </div>
-
-        <div class="abas-texto">
-    <div class="aba-conteudo ativo">
-            <h3 class="aba-conteudo-titulo-principal">UM BOM FUTURO</h3>
-            <h4 class="aba-conteudo-titulo-sercundario">ESTUDAR BASTANTE</h4>
-            <div class="contador"></div>
-          </div>
-     <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal"> ESTUDAR</h3>
-            <h4 class="aba-conteudo-titulo-sercundario">PRESTAR ATENÇAO NAS AULAS</h4>
-            <div class="contador"></div>
-          </div>
-    <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal"> SE ESFORCAR</h3>
-            <h4 class="aba-conteudo-titulo-sercundario">PARAR DE PROCRASTINAR</h4>
-            <div class="contador"></div>
-          </div>   
-    <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal"> SER EMPREENDEDOR</h3>
-            <h4 class="aba-conteudo-titulo-sercundario">TER RESPONSABILIDADE FINANCEIRA</h4>
-            <div class="contador"></div>
-          </div>
-        </div>
-
+        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <div class="conteudo">
+            <div class="botoes">
+                <button class="botao ativo">Cursos na Alura</button>
+                <button class="botao">Criar projetos em Javascript</button>
+                <button class="botao">Criar um portfolio</button>
+                <button class="botao">Atualizar meu currículo</button>
+            </div>
+            <div class="abas-textos">
+                <div class="aba-conteudo ativo">
+                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <div class="contador"></div>
+                </div>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
