--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Cursos na Alura</button>
-                <button class="botao">Criar projetos em Javascript</button>
-                <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao ativo">Trabalhar</button>
+                <button class="botao">Ganhar dinheiro</button>
+                <button class="botao">Estudar pro enem</button>
+                <button class="botao">Conseguir uma boa faculdade</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Trabalhar</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Se esforcar bastante</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Conseguir uma boa faculdade</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Ter uma nota boa no enem</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Ganhar Dinheiro</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Ter um trabalho e responsabilidade financeira</h4>
                     <div class="contador"></div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Estudar pro enem</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Ter uma planilha de estudos e bom desempenho na escola</h4>
                     <div class="contador"></div>
                 </div>
             </div>
